updated tmux conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,16 +2,7 @@ set -g mouse on
 set -g default-terminal "screen-256color" # colors!
 set -g history-limit 5000                 # boost history
 setw -g mode-keys vi
-set-window-option -g status-left " #S "
-set-window-option -g status-left-fg black
-set-window-option -g status-left-bg white
-set-window-option -g status-right " %H:%M %d-%b-%y "
-set-window-option -g status-right-fg black
-set-window-option -g status-right-bg white
-set-window-option -g window-status-format " #I: #W "
-set-window-option -g window-status-current-format " #I: #W "
-set-window-option -g window-status-current-fg green
-set-window-option -g window-status-current-bg black
+
 # navigate panes using jk, and ctrl+jk (no prefix)
 bind-key -r j select-pane -t :.-
 bind-key -r k select-pane -t :.+
@@ -27,3 +18,42 @@ bind | split-window -h
 bind - split-window -v
 unbind '"'
 unbind %
+
+######################
+### DESIGN CHANGES ###
+######################
+
+# loud or quiet?
+set -g visual-activity off
+set -g visual-bell off
+set -g visual-silence off
+setw -g monitor-activity off
+set -g bell-action none
+
+#  modes
+setw -g clock-mode-colour colour5
+setw -g mode-style 'fg=colour1 bg=colour18 bold'
+
+# panes
+set -g pane-border-style 'fg=colour19 bg=colour0'
+set -g pane-active-border-style 'bg=colour0 fg=colour9'
+
+# statusbar
+set -g status-position bottom
+set -g status-justify left
+set -g status-style 'bg=colour18 fg=colour137 dim'
+set -g status-left ''
+set -g status-right '#[fg=colour233,bg=colour19] %d/%m #[fg=colour233,bg=colour8] %H:%M:%S '
+set -g status-right-length 50
+set -g status-left-length 20
+
+setw -g window-status-current-style 'fg=colour1 bg=colour19 bold'
+setw -g window-status-current-format ' #I#[fg=colour249]:#[fg=colour255]#W#[fg=colour249]#F '
+
+setw -g window-status-style 'fg=colour9 bg=colour18'
+setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
+
+setw -g window-status-bell-style 'fg=colour255 bg=colour1 bold'
+
+# messages
+set -g message-style 'fg=colour232 bg=colour16 bold'
